Fix editor view for Gapless style

--- a/src/extensions/block-styles/columns/styles/editor.scss
+++ b/src/extensions/block-styles/columns/styles/editor.scss
@@ -10,6 +10,11 @@
 					margin-left: 0;
 					margin-right: 0;
 					flex-basis: 50%;
+
+					> .editor-block-list__block-edit{
+						margin-left: 0;
+						margin-right: 0;
+					}
 				}
 			}
 		}
